fix and adjust menu background clipping

--- a/public/css/ds3.css
+++ b/public/css/ds3.css
@@ -1,25 +1,26 @@
 BODY {
-    background-color: #111111;      
-}
-
-
-.bg { 
-  background-image: url("/assets-ds3/background.png");  
-  height: 100%; 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-color: #111111;
+    background-image: url("/assets-ds3/background.png");  
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed; 
+    font-family: "Mandrel";  
+    
 }
 
 .menu-bg { 
-  background-image: url("/assets-ds3/message-menu.png");  
-  height: 100%;  
+  background-image: url("/assets-ds3/message-menu.png");      
   background-repeat: no-repeat; 
-  background-size: cover;
+  background-size: 100% 100%;
+  max-width: 540px;
+  min-height: 690px;
+  max-height: 700px;
 }
 
-.container-lg {  
-  font-family: "Mandrel";
+.noWrap {
+  white-space: nowrap;  
 }
 
 .plaque {
@@ -37,6 +38,10 @@ BODY {
 
 .text-responsive {
     font-size: calc(13px + (32 - 13) * ((100vw - 320px) / (1920 - 320)));   
+}
+
+.mainContainer {
+  position: relative;
 }
 
 #mainTemplate {
@@ -66,18 +71,12 @@ BODY {
   align-self: flex-end;
 }
 
-.mainContainer { 
-  width: 40%;
-  height: 77.7%;
-  font-family: "Mandrel";
-}
-
 .wordLabel {
     vertical-align: top
 }
 
 #conjRow {
-    display: none;
+    display: none;    
 }
 
 #conjunction {
@@ -92,17 +91,25 @@ BODY {
     display: none;
 }
 
+.returnDiv {
+  height: 0px;
+  width: 0px;
+  padding: 0 0;
+  position: relative;
+}
+
 #returnHomepage {
   position: absolute;
-  top: 200;
-  left: 16vw;
+  top: -20;
+  left: -80;
   max-height: 80px;
 }
 
-@media screen and (min-width:0px) and (max-width:1180px){
+
+@media screen and (min-width:0px) and (max-width:696px){
   #returnHomepage {
-    top: 180;
-    left: 2vw;
+    top: -15;
+    left: 10;
     max-height: 60px;    
   }
 }
